package uade.edu.guides.entity;

public enum Gender {

    M, F

}
