package uade.edu.guides.entity;

public enum ServiceType {

    GROUP, INDIVIDUAL, TRANSLATION

}
