package uade.edu.guides.entity;

public class Tourist extends Profile {

}
