package uade.edu.guides.entity;

public enum TrophyType {

    SUCCESS, REVIEW

}
